# code-safety

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability_report.md
.github/workflows/: benchmark.yml  ci.yml  codeql-analysis.yml  docs.yml  pysa-analysis.yml  semgrep-analysis.yml
analysis/codeql/: README.md  codeql-config.yml  qlpack.yml
analysis/codeql/libraries/: DjangoSinks.qll  DjangoSources.qll
analysis/codeql/queries/: command-injection.ql  deserialization.ql  hardcoded-secrets.ql  idor.ql  mass-assignment.ql  path-traversal.ql  sensitive-logging.ql  sql-injection.ql  ssrf.ql  ssti.ql  xss-reflected.ql  xss-stored.ql  xxe.ql
analysis/codeql/scripts/: run_analysis.sh
analysis/codeql/suites/: vulnshop-full.qls  vulnshop-security.qls
analysis/pysa/: .pyre_configuration  README.md  taint.config
analysis/pysa/filters/: false_positives.json
analysis/pysa/model_generators/: __init__.py  generate_django_models.py
analysis/pysa/models/: django_sanitizers.pysa  django_sinks.pysa  django_sources.pysa  third_party.pysa  vulnshop_custom.pysa
analysis/pysa/scripts/: parse_results.py  run_pysa.sh
analysis/semgrep/: .semgrep.yml  README.md
analysis/semgrep/rules/access-control/: idor.yml  mass-assignment.yml  path-traversal.yml
analysis/semgrep/rules/crypto/: hardcoded-secrets.yml  weak-crypto.yml
analysis/semgrep/rules/deserialization/: insecure-deser.yml
analysis/semgrep/rules/injection/: command-injection.yml  sql-injection.yml  ssti.yml  xss.yml
analysis/semgrep/rules/logging/: sensitive-data.yml
analysis/semgrep/rules/ssrf/: ssrf.yml
analysis/semgrep/rules/xxe/: xxe.yml
analysis/semgrep/scripts/: run_semgrep.sh
benchmarks/: README.md
benchmarks/cve-reproductions/: README.md  cve_2022_34265.py  cve_2023_36414.py  log4shell_pattern.py
benchmarks/ground-truth/: taint-flows.yaml  vulnerabilities.json
benchmarks/results/: summary.md
benchmarks/results/semgrep/: benchmark-report.md
benchmarks/scripts/: generate_report.py  run_benchmarks.py
docs/: index.md
docs/assets/css/: custom.css
docs/assets/js/: custom.js
docs/benchmarks/: cve-analysis.md  index.md  methodology.md  results.md  running.md
docs/enterprise/: ci-cd.md  false-positives.md  governance.md  index.md  scaling.md
docs/getting-started/: index.md  installation.md  prerequisites.md  quick-start.md
docs/theory/: dataflow.md  fundamentals.md  index.md  metrics.md
docs/tools/: comparison.md  index.md
docs/tools/codeql/: advanced.md  database.md  index.md  queries.md
docs/tools/pysa/: advanced.md  configuration.md  custom-models.md  index.md  models.md  running.md
docs/tools/semgrep/: index.md  quickstart.md  rules.md  taint-mode.md
docs/vulnerabilities/: command-injection.md  deserialization.md  index.md  path-traversal.md  sql-injection.md  ssrf.md  ssti.md  xss.md  xxe.md
docs/vulnshop/: architecture.md  exploitation.md  index.md  overview.md  vulnerability-map.md
presentations/demos/: 01-sql-injection-demo.sh  02-command-injection-demo.sh  03-ssrf-demo.sh  04-xss-demo.sh  05-deserialization-demo.sh
presentations/slides/: taint-analysis-masterclass.md  tool-deep-dive.md
presentations/speaker-notes/: main-presentation-notes.md
scripts/: setup.sh
vulnerable-app/: Dockerfile  README.md  manage.py  requirements.txt
vulnerable-app/admin_panel/: __init__.py  urls.py  views.py
vulnerable-app/api/: __init__.py  serializers.py  urls.py  views.py
vulnerable-app/authentication/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
vulnerable-app/cart/: __init__.py  admin.py  models.py  urls.py  views.py
vulnerable-app/catalog/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
vulnerable-app/fixtures/: initial_data.json
vulnerable-app/middleware/: __init__.py  logging.py
vulnerable-app/notifications/: __init__.py  urls.py  views.py
vulnerable-app/payment/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
vulnerable-app/profile/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
vulnerable-app/reviews/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
vulnerable-app/static/css/: style.css
vulnerable-app/static/js/: main.js
vulnerable-app/templates/: base.html  home.html
vulnerable-app/templates/admin_panel/: dashboard.html  diagnostics.html  file_manager.html  logs.html  system_info.html
vulnerable-app/templates/authentication/: change_password.html  login.html  password_reset.html  register.html
vulnerable-app/templates/cart/: cart.html
vulnerable-app/templates/catalog/: category_detail.html  featured.html  product_detail.html  product_list.html  search_results.html
vulnerable-app/templates/notifications/: email_preview.html  settings.html  template_editor.html
vulnerable-app/templates/payment/: add_payment_method.html  checkout.html  confirmation.html  order_detail.html  order_history.html  payment_methods.html
vulnerable-app/templates/profile/: add_address.html  addresses.html  edit.html  preferences.html  view.html
vulnerable-app/templates/reviews/: latest_reviews.html  product_reviews.html  review_form.html
vulnerable-app/templates/webhooks/: configure.html  test.html
vulnerable-app/vulnshop/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
vulnerable-app/webhooks/: __init__.py  apps.py  urls.py  views.py
