# =============================================================================
# pyproject.toml - Taint Analysis Masterclass
# =============================================================================
# Project configuration and tool settings.

[project]
name = "taint-analysis-masterclass"
version = "1.0.0"
description = "aint analysis demonstration with Pysa, CodeQL, and Semgrep"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Laurent Giovannoni"}
]
maintainers = [
    {name = "Laurent Giovannoni"}
]
keywords = [
    "security",
    "taint-analysis",
    "static-analysis",
    "sast",
    "pysa",
    "codeql",
    "semgrep",
    "appsec",
    "application-security",
    "vulnerability-detection",
    "django",
    "owasp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/laugiov/taint-analysis-masterclass"
Documentation = "https://laugiov.github.io/taint-analysis-masterclass"
Repository = "https://github.com/laugiov/taint-analysis-masterclass.git"
Issues = "https://github.com/laugiov/taint-analysis-masterclass/issues"
Changelog = "https://github.com/laugiov/taint-analysis-masterclass/blob/main/CHANGELOG.md"

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Ruff - Linter & Formatter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude directories
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pyre",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs/site",
    "venv",
    "*/migrations/*",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # Ruff-specific rules
]

# Disable rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "TRY003", # Long exception messages
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
# Disable security checks for intentionally vulnerable code
"vulnerable-app/**/*.py" = [
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "PLW",    # pylint warnings
]
# Tests can have assertions and unused arguments
"tests/**/*.py" = [
    "S101",   # assert
    "ARG",    # unused arguments
    "PLR2004", # magic values
]
# Scripts can use print
"scripts/**/*.py" = [
    "T201",   # print
]
"benchmarks/**/*.py" = [
    "T201",   # print
]

[tool.ruff.lint.isort]
known-first-party = ["vulnshop", "authentication", "catalog", "cart", "profile"]
known-third-party = ["django", "rest_framework", "requests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MyPy - Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "migrations",
    "tests",
]

[[tool.mypy.overrides]]
module = "vulnerable-app.*"
ignore_errors = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "vulnerability: marks tests that verify vulnerability existence",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["vulnerable-app"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Black (if used alongside Ruff)
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pyre
  | \.venv
  | venv
  | migrations
)/
'''
